# athena

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
athena/: __init__.py  cli.py  configs.py  database.py  settings.py
athena/apicultor/: client.py  constants.py  fetch.py
athena/client/: binance.py  fetch.py
athena/core/: candle.py  context.py  dataset_layout.py  fluctuations.py  market_entities.py
athena/entrypoints/: __init__.py  backtest.py  cli.py  download.py  fetch.py  utils.py  visualize.py
athena/hub/: client.py  fetch.py
athena/optimize/: __init__.py  backtesting.py  orders.py  strategy.py
athena/performance/: backtesting.py  config.py  models.py  optimize.py  report.py  trading_session.py
athena/templates/: performance_report.html  visualize_indicators.html
athena/testing/: equality.py  generate.py
athena/tradingtools/: __init__.py  backtesting.py  build_report.py  models.py  orders.py  performance_metrics.py  performance_report.py
athena/types/: __init__.py  candle.py  enums.py  period.py  signal.py
configs/: config_data.yaml  config_example.yaml  config_indicators.yaml  config_strategy.yaml
tests/: conftest.py  test_database.py
tests/apicultor/: test_client.py  test_fetch.py
tests/client/: test_binance.py  test_fetch.py
tests/core/: test_candle.py  test_market_entities.py
tests/entrypoints/: test_backtest.py  test_download.py  test_visualize.py
tests/fluctuations/: test_fluctuations.py
tests/hub/: test_client.py  test_fetch.py
tests/optimize/: test_backtesting.py  test_orders.py  test_strategy.py
tests/performance/: conftest.py  test_report.py  test_trading_session.py
tests/tradingtools/: test_backtesting.py  test_build_report.py  test_models.py  test_orders.py  (+3 more)
(+51 files in other folders)
