[tool.poetry]
name = "athena"
version = "0.0.1"
description = "Create, backtest and deploy trading strategies"
authors = ["Baptiste Bouillon <1bouillonbaptiste@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
ruff = "0.5.7"
pytest = "^8.3.2"
python-binance = "^1.0.19"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pandas = "^2.2.2"
ipython = "^8.26.0"
tqdm = "^4.66.5"
click = "^8.1.7"
plotly = "^5.24.1"

[tool.poetry.scripts]
athena = "athena.entrypoints:app"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
